--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,9 @@ $RECYCLE.BIN/
 # Local stuff
 downloads
 backup
+
+# Builds
+Engine/Engine/bin
+Engine/Engine/obj
+Engine/Engine.VC.opendb
+Engine/.vs
