--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,8 @@ downloads
 backup
 
 # Builds
-Engine/Engine/bin
-Engine/Engine/obj
+Engine/Engine/bin/
+Engine/Engine/obj/
 Engine/Engine.VC.opendb
 Engine/.vs
+*.log
