Prisms with multiple colors. Fixes. Finishes Assignment 4.

--- a/Engine/Engine/Engine.vcxproj
+++ b/Engine/Engine/Engine.vcxproj
@@ -146,7 +146,7 @@
     <ClCompile Include="src\mat.cpp" />
     <ClCompile Include="src\models.cpp" />
     <ClCompile Include="src\object.cpp" />
-    <ClCompile Include="src\prism.cpp" />
+    <ClCompile Include="src\prettymodels.cpp" />
     <ClCompile Include="src\shaders.cpp" />
     <ClCompile Include="src\tests.cpp" />
     <ClCompile Include="src\vec2.cpp" />
@@ -157,7 +157,7 @@
     <ClInclude Include="src\mat.hpp" />
     <ClInclude Include="src\models.hpp" />
     <ClInclude Include="src\object.hpp" />
-    <ClInclude Include="src\prism.hpp" />
+    <ClInclude Include="src\prettymodels.hpp" />
     <ClInclude Include="src\shaders.hpp" />
     <ClInclude Include="src\tests.hpp" />
     <ClInclude Include="src\vec.hpp" />
