--- a/Engine/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine/Engine.vcxproj.filters
@@ -104,6 +104,9 @@
     <ClInclude Include="src\glutwrappers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\singleton.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\colored\frag.glsl">
