--- a/Engine/Engine/Engine.vcxproj
+++ b/Engine/Engine/Engine.vcxproj
@@ -134,7 +134,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\..\dependencies\glew\lib\Release\x64;..\..\dependencies\freeglut\lib\x64;;..\..\dependencies\SOIL\;..\..\dependencies\SOIL\x64\Release</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\dependencies\glew\lib\Release\x64;..\..\dependencies\freeglut\lib\x64;;..\..\dependencies\soil\Release\x64</AdditionalLibraryDirectories>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;freeglut.lib;glew32.lib;%(AdditionalDependencies);SOIL.lib</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
