--- a/Engine/Engine/Engine.vcxproj
+++ b/Engine/Engine/Engine.vcxproj
@@ -196,6 +196,7 @@
     <ClCompile Include="src\texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\DirectionalLight.hpp" />
     <ClInclude Include="src\light.hpp" />
     <ClInclude Include="src\particle.h" />
     <ClInclude Include="src\ParticleSystem.hpp" />
@@ -206,6 +207,7 @@
     <ClInclude Include="src\materialnode.h" />
     <ClInclude Include="src\modelmanager.hpp" />
     <ClInclude Include="src\model.hpp" />
+    <ClInclude Include="src\PointLight.hpp" />
     <ClInclude Include="src\scenenode.hpp" />
     <ClInclude Include="src\quaternion.hpp" />
     <ClInclude Include="src\scene.hpp" />
