--- a/Engine/Engine/Engine.vcxproj
+++ b/Engine/Engine/Engine.vcxproj
@@ -184,6 +184,7 @@
     <ClCompile Include="src\materialnode.cpp" />
     <ClCompile Include="src\modelmanager.cpp" />
     <ClCompile Include="src\model.cpp" />
+    <ClCompile Include="src\RainParticleSystem.cpp" />
     <ClCompile Include="src\scenenode.cpp" />
     <ClCompile Include="src\quaternion.cpp" />
     <ClCompile Include="src\scene.cpp" />
@@ -196,6 +197,7 @@
     <ClCompile Include="src\texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\RainParticleSystem.hpp" />
     <ClInclude Include="src\light.hpp" />
     <ClInclude Include="src\particle.h" />
     <ClInclude Include="src\ParticleSystem.hpp" />
