--- a/Engine/Engine/Engine.vcxproj
+++ b/Engine/Engine/Engine.vcxproj
@@ -229,6 +229,7 @@
     <None Include="res\shaders\particle\frag.glsl" />
     <None Include="res\shaders\particle\vertex.glsl" />
     <None Include="res\shaders\rain\frag.glsl" />
+    <None Include="res\shaders\rain\geom.glsl" />
     <None Include="res\shaders\rain\vertex.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
