--- a/Engine/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine/Engine.vcxproj.filters
@@ -158,10 +158,11 @@
     <None Include="res\shaders\colored\vertex.glsl" />
     <None Include="res\shaders\normalmapping\frag.glsl" />
     <None Include="res\shaders\normalmapping\vertex.glsl" />
-    <None Include="res\shaders\rain\frag.glsl" />
-    <None Include="res\shaders\rain\vertex.glsl" />
     <None Include="res\shaders\particle\frag.glsl" />
     <None Include="res\shaders\particle\vertex.glsl" />
     <None Include="res\shaders\rain\vertex.glsl" />
+    <None Include="res\shaders\rain\frag.glsl" />
+    <None Include="res\shaders\rain\vertex.glsl" />
+    <None Include="res\shaders\rain\geom.glsl" />
   </ItemGroup>
 </Project>
