--- a/Engine/Engine/Engine.vcxproj
+++ b/Engine/Engine/Engine.vcxproj
@@ -176,6 +176,7 @@
     </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\skyboxnode.cpp" />
     <ClCompile Include="src\light.cpp" />
     <ClCompile Include="src\ParticleSystem.cpp" />
     <ClCompile Include="src\camera.cpp" />
@@ -197,6 +198,7 @@
     <ClCompile Include="src\texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\skyboxnode.hpp" />
     <ClInclude Include="src\RainParticleSystem.hpp" />
     <ClInclude Include="src\DirectionalLight.hpp" />
     <ClInclude Include="src\light.hpp" />
@@ -226,6 +228,8 @@
     <None Include="res\shaders\normalmapping\vertex.glsl" />
     <None Include="res\shaders\rain\frag.glsl" />
     <None Include="res\shaders\rain\vertex.glsl" />
+    <None Include="res\shaders\skybox\frag.glsl" />
+    <None Include="res\shaders\skybox\vertex.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
