--- a/Engine/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine/Engine.vcxproj.filters
@@ -1,164 +1,59 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="Resource Files\shaders">
-      <UniqueIdentifier>{f69fe3be-c2d5-449d-b8ca-009a71585296}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resource Files\shaders\colored">
-      <UniqueIdentifier>{3e2485a4-90fa-4f0a-abc8-cfffa889670d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resource Files\shaders\rain">
-      <UniqueIdentifier>{ebfa5fc9-e18b-4246-9c45-54641c77ab3b}</UniqueIdentifier>
-    </Filter>
+    <ClCompile Include="src\light.cpp" />
+    <ClCompile Include="src\ParticleSystem.cpp" />
+    <ClCompile Include="src\camera.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\mat.cpp" />
+    <ClCompile Include="src\materialnode.cpp" />
+    <ClCompile Include="src\modelmanager.cpp" />
+    <ClCompile Include="src\model.cpp" />
+    <ClCompile Include="src\RainParticleSystem.cpp" />
+    <ClCompile Include="src\scenenode.cpp" />
+    <ClCompile Include="src\quaternion.cpp" />
+    <ClCompile Include="src\scene.cpp" />
+    <ClCompile Include="src\shadermanager.cpp" />
+    <ClCompile Include="src\shaders.cpp" />
+    <ClCompile Include="src\tests.cpp" />
+    <ClCompile Include="src\vec2.cpp" />
+    <ClCompile Include="src\vec3.cpp" />
+    <ClCompile Include="src\vec4.cpp" />
+    <ClCompile Include="src\texture.cpp" />
+    <ClCompile Include="src\skyboxnode.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\mat.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\vec3.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\vec4.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\tests.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\vec2.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\shaders.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\quaternion.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\scene.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\scenenode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\camera.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\modelmanager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\model.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\texture.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\materialnode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\shadermanager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ParticleSystem.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\light.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\RainParticleSystem.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    <ClInclude Include="src\RainParticleSystem.hpp" />
+    <ClInclude Include="src\DirectionalLight.hpp" />
+    <ClInclude Include="src\light.hpp" />
+    <ClInclude Include="src\particle.h" />
+    <ClInclude Include="src\ParticleSystem.hpp" />
+    <ClInclude Include="src\animation.hpp" />
+    <ClInclude Include="src\camera.hpp" />
+    <ClInclude Include="src\glutwrappers.h" />
+    <ClInclude Include="src\mat.hpp" />
+    <ClInclude Include="src\materialnode.h" />
+    <ClInclude Include="src\modelmanager.hpp" />
+    <ClInclude Include="src\model.hpp" />
+    <ClInclude Include="src\PointLight.hpp" />
+    <ClInclude Include="src\scenenode.hpp" />
+    <ClInclude Include="src\quaternion.hpp" />
+    <ClInclude Include="src\scene.hpp" />
+    <ClInclude Include="src\shaders.hpp" />
+    <ClInclude Include="src\singleton.hpp" />
+    <ClInclude Include="src\tests.hpp" />
+    <ClInclude Include="src\vec.hpp" />
+    <ClInclude Include="src\texture.hpp" />
+    <ClInclude Include="src\skyboxnode.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\animation.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\camera.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\glutwrappers.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\mat.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\model.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\modelmanager.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\quaternion.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\scene.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\scenenode.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\shaders.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\singleton.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\tests.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\vec.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\texture.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\materialnode.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\ParticleSystem.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\particle.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\light.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\RainParticleSystem.hpp">
-    <ClInclude Include="src\DirectionalLight.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\PointLight.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="res\shaders\colored\frag.glsl">
-      <Filter>Resource Files\shaders\colored</Filter>
-    </None>
-    <None Include="res\shaders\colored\vertex.glsl">
-      <Filter>Resource Files\shaders\colored</Filter>
-    </None>
+    <None Include="res\shaders\colored\frag.glsl" />
+    <None Include="res\shaders\colored\vertex.glsl" />
     <None Include="res\shaders\normalmapping\frag.glsl" />
     <None Include="res\shaders\normalmapping\vertex.glsl" />
-    <None Include="res\shaders\rain\frag.glsl">
-      <Filter>Resource Files\shaders\rain</Filter>
-    </None>
-    <None Include="res\shaders\rain\vertex.glsl">
-      <Filter>Resource Files\shaders\rain</Filter>
-    </None>
+    <None Include="res\shaders\rain\frag.glsl" />
+    <None Include="res\shaders\rain\vertex.glsl" />
+    <None Include="res\shaders\skybox\vertex.glsl" />
+    <None Include="res\shaders\skybox\frag.glsl" />
   </ItemGroup>
 </Project>
